# HyperStats

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/modules/ai/: AiModule.tsx
src/components/modules/cpu/: CpuModule.tsx
src/components/modules/devtools/: DevToolsModule.tsx
src/components/modules/disk/: DiskModule.tsx
src/components/modules/files/: FilesModule.tsx
src/components/modules/gpu/: GpuModule.tsx
src/components/modules/memory/: MemoryModule.tsx
src/components/modules/network/: NetworkModule.tsx
src/components/modules/overview/: OverviewModule.tsx
src/components/modules/processes/: ProcessesModule.tsx
src/components/modules/sensors/: SensorsModule.tsx
src/components/shared/: Charts.tsx
src/i18n/: index.tsx
src/lib/: mock-stats.ts
src/store/: index.ts
